# tfg-H16b

./: .env-redacted  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: cli.py
app/controllers/: scans_controller.py  trajectory_controller.py  views_controller.py
app/functions/: integrate_trajectory.py
app/functions/scan_phase_space/: heatmap.py  interloop_v2.py  interloop_v3.py  sign_change.py
app/models/: discrete_plane.py  dynamical_system.py  job_metadata.py  trajectory.py
app/models/scan_maps/: heatmap.py  interloop.py  sign_change.py
app/parameters/: base_scan.py  heatmap.py  interloop.py  trajectory.py
app/utils/: adapt_json.py  config_logging.py  heartbeat.py  io_wrapper.py  parse_job_config.py
docs/: cli-reference.txt
docs/job-config-reference/: heatmap.txt  interloop.txt  sign_change.txt  trajectory.txt
docs/minotauro/: available-packages.txt  submissions.txt
jobs/: heatmap_demo.yaml  heatmap_demo2.yaml  heatmap_test.yaml  interloop_demo.yaml  interloop_demo5.yaml  interloop_test.yaml  minotauro_job.cmd  sign_change_demo.yaml  sign_change_test.yaml  trajectory_test.yaml
script/: 2mt_login.sh  2mt_pull.sh  2mt_push.sh  clear_old_logs.sh  functions  less_last_log.sh  less_last_result.sh  mt_submit.sh  plot_last_result.sh  print-cli-reference.sh  spawn_docker_shell.sh  tail_last_log.sh  test.sh
